付政委 优化dao

--- a/itstack-demo-worker-service/pom.xml
+++ b/itstack-demo-worker-service/pom.xml
@@ -20,7 +20,7 @@
         </dependency>
         <dependency>
             <groupId>itstack-demo-worker</groupId>
-            <artifactId>itstack-demo-worker-domain</artifactId>
+            <artifactId>itstack-demo-worker-dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
